# next_space_coop

./: .gitignore  .travis.yml  BAZEL_HACKS.txt  Cargo.toml  README.md  WORKSPACE  a.out  default.nix  fake_lib.rs  hotbuild.sh  resolve_cargo_deps.sh
cargo/: Cargo.toml
client/: BUILD  main.rs
client/launcher/src/: main.rs
client_server/dylib_core/src/: lib.rs
client_server/server/launcher/: BUILD
common/: BUILD  README.md  lib.rs  some.proto  some2.proto
common/client_server/network/: BUILD
common/clock/: BUILD
common/clock/src/: lib.rs
common/component/: BUILD
common/event_bus/: BUILD  event_bus.proto
common/event_bus/src/: lib.rs
common/message_bus/: message_bus.proto
common/network/: BUILD  protocol.proto
common/pubsub/: BUILD  lib.rs  pubsub.proto
common/runtime_loaded_game/: BUILD
common/runtime_loading/loadable/: BUILD
common/service/: BUILD  service.proto
common/src/: lib.rs
common/state/: BUILD  state.proto
graphics/toy/: BUILD
hotloader/: BUILD
hotloader/src/: lib.rs
logs/: README.md
network/lite/: BUILD  README.md  lite.proto
nix/: README.md
nix/bazel/: allow_overriding_sh.patch  default.nix  fix_shebangs.patch
physics/: BUILD
physics/src/: lib.rs
proto/: rust.bzl
server/: BUILD  main.rs
server/core/: BUILD  state.proto
server/sample_service/: BUILD  sample_service.proto
server/service_registry/: BUILD
server/src/: main.rs
space_coop/: README.md
space_coop/common/: BUILD  game.proto  network.proto
tools/: bazel.rc  bazel_0.4.4-linux-x86_64.deb.sha256
tools/rust/: codegen.bzl
(+39 files in other folders)
