[package]
name = "next_space_coop"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
clap = "2.20.0"
itertools = "0.5.8"
specs = "0.7.0"
capnp = "0.7.5"
protobuf = "1.0.24"
nphysics3d = "0.5.0"
libloading = "0.3.1"
libc = "0.2.17"
log = "0.3.6"
fern = "0.3.5"
env_logger = "0.4.0"
lazy_static = "0.2.2"
time = "0.1.35"
rand = "0.3.15"
gaffer_udp = "0.1.4"
ash = "0.14.2"

[dependencies.error-chain]
version = "0.8.1"
default-features = false

[lib]
path = "fake_lib.rs"
